# IDOP

./: .env.example  .gitignore  Dockerfile  IDOP_Complete_Documentation.html  Makefile  README.md  _test_endpoints.sh  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run.py
.github/workflows/: cd.yml  ci.yml
app/: __init__.py  config.py  logging_config.py  main.py  opik.py
app/api/: auth.py  schemas.py
app/api/routes/: auth_routes.py  cache.py  chat.py  documents.py  health.py  memory.py  mutation.py  sql.py
app/core/: __init__.py  approval_gate.py  audit_logger.py  csrag_engine.py  document_processor.py  embeddings.py  llm_factory.py  schema_registry.py  sparse_vector_service.py  vector_store.py
app/core/crag/: evaluator.py  web_search.py
app/core/feature1_sql/: approval_gate.py  executor.py  llm_judge.py  shared.py  sql_validator.py  vanna_service.py
app/core/feature2_mutation/: approval_gate.py  column_mapper.py  executor.py  file_parser.py  llm_judge.py  mutation_generator.py  op_classifier.py  rule_validator.py
app/core/feature3_rag/: context_enrichment.py  hyde.py  ragas_evaluator.py  reranking.py  retrieval.py
app/core/graph/: __init__.py  builder.py  nodes.py  router.py  state.py
app/core/memory/: ltm.py  stm.py
app/core/srag/: verifier.py
app/services/: __init__.py  cache_init.py  cache_service.py  local_storage.py  pending_store.py  query_cache_service.py  s3_storage.py  storage_backend.py
app/utils/: logger.py  validators.py
business_rules/: rules.json
docs/: system_design_report.md
docs/design/: 00-index.md  01-system-architecture.md  02-unified-query-flow.md  03-document-upload-pipeline.md  04-feature1-sql-execution.md  05-feature2-mutation-pipeline.md  06-feature3-rag-pipeline.md  07-langgraph-state-machine.md  08-hybrid-search.md  09-crag-pipeline.md  10-srag-pipeline.md  11-memory-system.md  12-multi-level-cache.md  13-service-initialization.md  14-deployment.md  15-design-decisions-interview.md  16-production-deployment-guide.md
scripts/: create_test_pdf.py  deploy_smoke.py  direct_upload_benchmark_docs.py  eval_ragas.py  init_db.py  quick_benchmark.py  seed_benchmark_docs.py  validate_file_references.py  verify_fastembed_memory.py
tests/: conftest.py  deploy_smoke.py  deploy_smoke_test.py  eval_ragas.py  test_auth.py  test_cache_integration.py  test_caching.py  test_deploy_smoke.py  test_enhanced_apis.py  test_features.py  test_graph.py  test_hybrid_node.py  test_mutation_node.py  test_opik_integration.py  test_router.py  test_sparse_determinism.py  test_sql_api.py  test_storage_backends.py  test_vanna_fallback.py
workflows/: 06-feature3-rag-pipeline.md  08-hybrid-search.md  09-crag-pipeline.md  13-service-initialization.md  14-deployment.md  15-design-decisions-interview.md  16-production-deployment-guide.md
